jQuery UI changes

--- a/css/style.less
+++ b/css/style.less
@@ -78,6 +78,7 @@ body, html {
                         background: url('../images/profilepicture.jpg') no-repeat center;
                         background-size: cover;
                         background-position-y: 10%;
+                        z-index: 10000;
 
                         @media @galaxy {
                             width: 46px;
@@ -530,10 +531,6 @@ body, html {
                     padding-left: 0;
                     text-align: center;
                     width: 100%;
-
-                    .tooltip.top > .tooltip-arrow {
-                            background: rgba(221, 75, 57, 1) !important;
-                        }
 
                     li {
                         padding: 15px 0;
