--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ html {
   background: url('../images/profilepicture.jpg') no-repeat center;
   background-size: cover;
   background-position-y: 10%;
+  z-index: 10000;
 }
 @media only screen and (min-width: 360px) {
   .home-page .navbar.navbar-default .container-fluid .navbar-header .navbar-brand .profile-pic {
@@ -480,11 +481,6 @@ html {
   padding-left: 0;
   text-align: center;
   width: 100%;
-}
-.home-page #fullpage #section1 .tech-stack ul .tooltip.top > .tooltip-arrow,
-.home-page #fullpage #section1 .tools-used ul .tooltip.top > .tooltip-arrow,
-.home-page #fullpage #section1 .other ul .tooltip.top > .tooltip-arrow {
-  background: #dd4b39 !important;
 }
 .home-page #fullpage #section1 .tech-stack ul li,
 .home-page #fullpage #section1 .tools-used ul li,
