--- a/css/style.less
+++ b/css/style.less
@@ -514,14 +514,22 @@ body, html {
         }
         
         #section0 {
-            background: url('../images/intro.jpg') no-repeat center;
-            background-size: cover;
+            //background: url('../images/intro.jpg') no-repeat center;
+            //background-size: cover;
             text-align: center;
+
+            .hint {
+                display: none;
+
+                @media @desk {
+                    display: inline-block;
+                }
+            }
         }
 
         #section1 {
-            background: url('../images/spring.jpg') no-repeat center;
-            background-size: cover;
+            //background: url('../images/spring.jpg') no-repeat center;
+            //background-size: cover;
             text-align: center;
 
             .tech-stack, .tools-used, .other {
@@ -578,14 +586,14 @@ body, html {
         }
 
         #section2 {
-            background: url('../images/summer.jpg') no-repeat center;
-            background-size: cover;
+            //background: url('../images/summer.jpg') no-repeat center;
+            //background-size: cover;
             text-align: center;
         }
 
         #section3 {
-            background: url('../images/leaves.jpg') no-repeat center;
-            background-size: cover;
+            //background: url('../images/leaves.jpg') no-repeat center;
+            //background-size: cover;
             text-align: center;
         }
 
