--- a/css/styles.less
+++ b/css/styles.less
@@ -594,6 +594,20 @@ body, html {
             font-size: 35px;
           }
         }
+
+        #outer-wrap {
+          display: none;
+
+          @media @desk {
+            display: block;
+          }
+        }
+
+        .video-placeholder {
+          @media @desk {
+            display: none;
+          }
+        }
       }
 
       &#story-freext {
