--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,31 @@
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes profileLink {
+  0% {
+    transform: translate(-10px);
+  }
+  30% {
+    transform: translate(-15px);
+  }
+  60% {
+    transform: translate(-20px);
+  }
+  100% {
+    transform: translate(-25px);
+  }
+}
 /* Reset */
 html,
 body,
@@ -220,6 +248,64 @@ html {
   transition: width 1s ease-in-out;
   z-index: 999;
 }
+.home-page .header #menu #menu-tray .profile-pic {
+  position: relative;
+  top: 20%;
+  left: 20%;
+  width: 0;
+  height: 0;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 10px #000000;
+  -moz-box-shadow: 0 0 10px #000000;
+  box-shadow: 0 0 10px #000000;
+  background: url('../images/profilepicture.jpg') no-repeat center;
+  background-size: cover;
+  background-position-y: 10%;
+  -webkit-transition: width 0.85s, height 0.85s, ease-in-out;
+  transition: width 0.85s, height 0.85s, ease-in-out;
+  z-index: 1000;
+}
+.home-page .header #menu #menu-tray .profile-pic.profile-pic-open {
+  width: 70px;
+  height: 70px;
+  -webkit-transition: width 1.5s, height 1.5s, ease-in-out;
+  transition: width 1.5s, height 1.5s, ease-in-out;
+}
+@media only screen and (min-width: 1200px) {
+  .home-page .header #menu #menu-tray .profile-pic.profile-pic-open {
+    width: 250px;
+    height: 250px;
+  }
+}
+.home-page .header #menu #menu-tray .profile-links {
+  position: relative;
+  top: 25%;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row {
+  border-top: 1px solid #FFF;
+  border-bottom: 1px solid #FFF;
+  height: 45px;
+  width: 100%;
+  text-align: center;
+  padding-top: 6px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link {
+  color: #FFF;
+  font-size: 0;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.profile-link-open {
+  font-size: 2em;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.github {
+  color: #999999;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.github i:hover {
+  color: #FFFFFF;
+  transition: All 1s ease;
+  transform: translate(-30px) forwards;
+}
 .home-page .content .black-bar {
   position: relative;
   width: 100%;
@@ -255,7 +341,12 @@ html {
 .home-page .content section#code-video {
   position: relative;
   min-height: 500px;
-  background: black;
+  background: url('../videos/Hello-World/Hello-World.jpg') no-repeat center;
+}
+@media only screen and (min-width: 1200px) {
+  .home-page .content section#code-video {
+    background: black;
+  }
 }
 .home-page .content section#code-video .text-content {
   color: #FFF;
@@ -268,7 +359,16 @@ html {
 }
 .home-page .content section#code-video .text-content h5 {
   color: #FFF;
-  font-size: 35px;
+}
+.home-page .content section#code-video .text-content h5.hello {
+  font-size: 2.5em;
+  animation: bounceIn 1s;
+}
+.home-page .content section#code-video .text-content h5.jordan {
+  margin-top: 15px;
+  font-size: 2em;
+  opacity: 0;
+  animation: bounceIn 1s ease-in-out 1.45s forwards;
 }
 .home-page .content section#code-video #outer-wrap {
   display: none;
@@ -276,11 +376,6 @@ html {
 @media only screen and (min-width: 1200px) {
   .home-page .content section#code-video #outer-wrap {
     display: block;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .home-page .content section#code-video .video-placeholder {
-    display: none;
   }
 }
 .home-page .content section#story-freext {
