--- a/css/styles.less
+++ b/css/styles.less
@@ -535,6 +535,71 @@ body, html {
           transition: width 1s ease-in-out;
           z-index: 999;
         }
+
+        .profile-pic {
+          position: relative;
+          top: 20%;
+          left: 20%;
+          width: 0;
+          height: 0;
+          -webkit-border-radius: 50%;
+          -moz-border-radius: 50%;
+          border-radius: 50%;
+          -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+          -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+          background: url('../images/profilepicture.jpg') no-repeat center;
+          background-size: cover;
+          background-position-y: 10%;
+          -webkit-transition: width 0.85s, height 0.85s, ease-in-out;
+          transition: width 0.85s, height 0.85s, ease-in-out;
+          z-index: 1000;
+
+          &.profile-pic-open {
+            width: 70px;
+            height: 70px;
+            -webkit-transition: width 1.5s, height 1.5s, ease-in-out;
+            transition: width 1.5s, height 1.5s, ease-in-out;
+
+            @media @desk {
+              width: 250px;
+              height: 250px;
+            }
+          }
+        }
+
+        .profile-links {
+          position: relative;
+          top: 25%;
+
+          .profile-link-row {
+            border-top: 1px solid #FFF;
+            border-bottom: 1px solid #FFF;
+            height: 45px;
+            width: 100%;
+            text-align: center;
+            padding-top: 6px;
+
+            .profile-link {
+              color: #FFF;
+              font-size: 0;
+
+              &.profile-link-open {
+                font-size: 2em;
+              }
+
+              &.github {
+                color: #999999;
+
+                i:hover {
+                  color: #FFFFFF;
+                  transition:All 1s ease;
+                  transform: translate(-30px) forwards;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -578,7 +643,11 @@ body, html {
       &#code-video {
         position: relative;
         min-height: 500px;
-        background: black;
+        background: url('../videos/Hello-World/Hello-World.jpg') no-repeat center;
+
+        @media @desk {
+          background: black;
+        }
 
         .text-content {
           color: #FFF;
@@ -591,7 +660,18 @@ body, html {
 
           h5 {
             color: #FFF;
-            font-size: 35px;
+
+            &.hello {
+              font-size: 2.5em;
+              animation: bounceIn 1s;
+            }
+
+            &.jordan {
+              margin-top: 15px;
+              font-size: 2em;
+              opacity: 0;
+              animation: bounceIn 1s ease-in-out 1.45s forwards;
+            }
           }
         }
 
@@ -600,12 +680,6 @@ body, html {
 
           @media @desk {
             display: block;
-          }
-        }
-
-        .video-placeholder {
-          @media @desk {
-            display: none;
           }
         }
       }
