--- a/css/variables.less
+++ b/css/variables.less
@@ -8,3 +8,38 @@
 @nex: ~"only screen and (min-width: 800px)";
 @fs: ~"only screen and (min-width: 960px)";
 @desk: ~"only screen and (min-width: 1200px)";
+
+
+@keyframes bounceIn {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  60% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes profileLink {
+  0% {
+    transform: translate(-10px);
+  }
+
+  30% {
+    transform: translate(-15px);
+  }
+
+  60% {
+    transform: translate(-20px);
+
+  }
+  100% {
+    transform: translate(-25px);
+
+  }
+}
