--- a/css/styles.css
+++ b/css/styles.css
@@ -12,18 +12,21 @@
     opacity: 1;
   }
 }
-@keyframes profileLink {
+@keyframes heartBeat {
   0% {
-    transform: translate(-10px);
+    transform: scale(0.5);
   }
-  30% {
-    transform: translate(-15px);
+  25% {
+    transform: scale(1);
   }
-  60% {
-    transform: translate(-20px);
+  50% {
+    transform: scale(1.5);
+  }
+  75% {
+    transform: scale(1);
   }
   100% {
-    transform: translate(-25px);
+    transform: scale(0.5);
   }
 }
 /* Reset */
@@ -242,7 +245,7 @@ html {
 .home-page .header #menu #menu-tray.open-tray {
   left: 0;
   height: 100%;
-  width: 33%;
+  width: 25%;
   border-right: 2px solid #FFF;
   -webkit-transition: width 1s ease-in-out;
   transition: width 1s ease-in-out;
@@ -251,7 +254,7 @@ html {
 .home-page .header #menu #menu-tray .profile-pic {
   position: relative;
   top: 20%;
-  left: 20%;
+  left: 15%;
   width: 0;
   height: 0;
   -webkit-border-radius: 50%;
@@ -284,27 +287,124 @@ html {
   top: 25%;
 }
 .home-page .header #menu #menu-tray .profile-links .profile-link-row {
-  border-top: 1px solid #FFF;
   border-bottom: 1px solid #FFF;
   height: 45px;
   width: 100%;
   text-align: center;
-  padding-top: 6px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row:nth-of-type(1) {
+  border-top: 1px solid #FFF;
 }
 .home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link {
   color: #FFF;
   font-size: 0;
+  height: 43px;
 }
 .home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.profile-link-open {
-  font-size: 2em;
+  font-size: 40px;
 }
-.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.github {
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text {
+  max-height: 43px;
+  text-decoration: none;
+  overflow: hidden;
+  margin-right: 5px;
+  display: inline-block;
+  transition: max-width 1s, opacity 1s ease-in-out 0.5s;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text i,
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text i.move-me {
+  transition: max-width 1s, opacity 1s ease-in-out 0.5s;
+  display: inline-block;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text span {
+  max-width: 0;
+  display: inline-block;
+  transition: max-width 1s, opacity 1s ease-in-out 0.5s;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text:hover .move-me {
+  padding-right: 10px;
+  text-align: center;
+  line-height: inherit;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text:hover .fa-square,
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text:hover .fa-circle {
+  display: none;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text:hover span {
+  float: right;
+  display: inline-block;
+  opacity: 1;
+  max-width: 150px;
+  transition: max-width 1s, opacity 1s ease-in-out 0.5s, color 0.2s;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link .link-text .fa-square {
+  color: #FFF;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.github .link-text {
   color: #999999;
 }
-.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.github i:hover {
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.github .link-text:hover {
   color: #FFFFFF;
-  transition: All 1s ease;
-  transform: translate(-30px) forwards;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.linkedin {
+  padding-top: 2px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.linkedin .link-text {
+  color: #517fa4;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.linkedin .link-text:hover {
+  color: #FFFFFF;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.linkedin .link-text:hover span {
+  max-width: 175px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.facebook {
+  padding-top: 2px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.facebook .link-text {
+  color: #3b5998;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.facebook .link-text:hover {
+  color: #FFFFFF;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.facebook .link-text:hover span {
+  max-width: 175px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.twitter {
+  padding-top: 2px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.twitter .link-text {
+  color: #00aced;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.twitter .link-text:hover {
+  color: #FFFFFF;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.twitter .link-text:hover span {
+  max-width: 175px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.google {
+  padding-top: 2px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.google .link-text {
+  color: #dd4b39;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.google .link-text:hover {
+  color: #FFFFFF;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.google .link-text:hover span {
+  max-width: 175px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.steam {
+  padding-top: 2px;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.steam .link-text {
+  color: #000000;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.steam .link-text:hover {
+  color: #FFFFFF;
+}
+.home-page .header #menu #menu-tray .profile-links .profile-link-row .profile-link.steam .link-text:hover span {
+  max-width: 175px;
 }
 .home-page .content .black-bar {
   position: relative;
@@ -369,6 +469,9 @@ html {
   font-size: 2em;
   opacity: 0;
   animation: bounceIn 1s ease-in-out 1.45s forwards;
+}
+.home-page .content section#code-video .text-content h5.jordan .fa-heart {
+  animation: heartBeat 1s ease-in-out 2.5s infinite;
 }
 .home-page .content section#code-video #outer-wrap {
   display: none;
