--- a/css/variables.less
+++ b/css/variables.less
@@ -25,21 +25,20 @@
   }
 }
 
-@keyframes profileLink {
+@keyframes heartBeat {
   0% {
-    transform: translate(-10px);
+    transform: scale(0.5);
   }
-
-  30% {
-    transform: translate(-15px);
+  25% {
+    transform: scale(1);
   }
-
-  60% {
-    transform: translate(-20px);
-
+  50% {
+    transform: scale(1.5);
+  }
+  75% {
+    transform: scale(1);
   }
   100% {
-    transform: translate(-25px);
-
+    transform: scale(0.5);
   }
 }
